--- a/FlightBookingSystem/src/main/resources/application.properties
+++ b/FlightBookingSystem/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/FlightDB
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.username=username
+spring.datasource.password=your_password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,3 +10,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #spring.devtools.restart.enabled=false
 server.port=9090
+
+#Email setup
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=yourmail@gmail.com
+spring.mail.password=app-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
